--- a/cart.html
+++ b/cart.html
@@ -26,7 +26,9 @@
       <div>
         <h4 class = "cart-original">Original</h4>
         <h4 class = "cart-o-price">$4.00</h4>
-        <img src="assets/Original-Cart.png" alt="Original Cinnamon Roll In Your Cart" class ="original-cart">
+        <img src="Assets/Original-Cart.png" alt="Original Cinnamon Roll In Your Cart" class ="original-cart">
+        <p class = "cart-description">Glaze: Vanilla Milk <br> Number of Rolls: 1 <br> Number of Boxes: 1</p>
+        <img src="Assets/delete.png" alt="Delete item in your cart" class ="delete-item">
       </div>
      
 
