--- a/product.html
+++ b/product.html
@@ -30,12 +30,12 @@
     <div class ="square3"></div>
     <h2>Cinnamon <br> Rolls</h2>
     <h6>We offer so many delicious flavors for you to choose from. Try any of our delicious rolls and personalize it with your choice of glazing!</h6>
-    <img src="assets/original.png" class="original" alt="Original Cinnamon Roll" style="width:200px">
-    <img src="assets/blackberry.png" class="blackberry" alt="Blackberry Cinnamon Roll" style="width:200px">
-    <img src="assets/walnut.png" class="walnut" alt="Walnut Cinnamon Roll" style="width:200px">
-    <img src="assets/gluten-free.png" class="gluten-free" alt="Original Gluten Free Cinnamon Roll" style="width:200px">
+    <img src="Assets/original.png" class="original" alt="Original Cinnamon Roll" style="width:200px">
+    <img src="Assets/blackberry.png" class="blackberry" alt="Blackberry Cinnamon Roll" style="width:200px">
+    <img src="Assets/walnut.png" class="walnut" alt="Walnut Cinnamon Roll" style="width:200px">
+    <img src="Assets/gluten-free.png" class="gluten-free" alt="Original Gluten Free Cinnamon Roll" style="width:200px">
     <img src="assets/pumpkin-spice.png" class="pumpkin-spice" alt="Pumpkin Spice Cinnamon Roll" style="width:200px">
-    <img src="assets/caramel-pecan.png" class="caramel-pecan" alt="Caramel Spice Cinnamon Roll" style="width:200px">
+    <img src="Assets/caramel-pecan.png" class="caramel-pecan" alt="Caramel Spice Cinnamon Roll" style="width:200px">
 
     <button class="button1" onclick='location.href="product_detail.html"'><b>Order Now</b></button>
     <button class="button2" ><b>Order Now</b></button>
