--- a/product_detail.html
+++ b/product_detail.html
@@ -27,12 +27,12 @@
   <div class ="square4"></div>
   <div class ="square5"></div>
   <div class ="sideNav">
-    <img src="assets/original-small.png" alt="original cinnamon roll" class="original-small" style="width:75px">
-    <img src="assets/blackberry-small.png" alt="blackberry cinnamon roll" class="blackberry-small" style="width:75px">
-    <img src="assets/walnut-small.png" alt="walnut cinnamon roll" class="walnut-small" style="width:75px">
-    <img src="assets/gf-small.png" alt="original gluten-free cinnamon roll" class="gf-small" style="width:75px">
-    <img src="assets/ps-small.png" alt="pumpkin spice cinnamon roll" class="ps-small" style="width:75px">
-    <img src="assets/cp-small.png" alt="caramel pecan cinnamon roll" class ="cp-small" style="width:75px">
+    <img src="Assets/original-small.png" alt="original cinnamon roll" class="original-small" style="width:75px">
+    <img src="Assets/blackberry-small.png" alt="blackberry cinnamon roll" class="blackberry-small" style="width:75px">
+    <img src="Assets/walnut-small.png" alt="walnut cinnamon roll" class="walnut-small" style="width:75px">
+    <img src="Assets/gf-small.png" alt="original gluten-free cinnamon roll" class="gf-small" style="width:75px">
+    <img src="Assets/ps-small.png" alt="pumpkin spice cinnamon roll" class="ps-small" style="width:75px">
+    <img src="Assets/cp-small.png" alt="caramel pecan cinnamon roll" class ="cp-small" style="width:75px">
     <h4 class="o-text">Original</h4>
     <h4 class="b-text">Blackberry</h4>
     <h4 class="w-text">Walnut</h4>
@@ -42,9 +42,9 @@
   </div>
 
   <div class="product-details">
-    <img src="assets/cinnamonroll-rect.png" class="original-large" alt="original cinnamon roll with vanilla glaze and mint leaves">
-    <img src="assets/rect-image.png" class="rect1" alt="original cinnamon roll small image">
-    <img src="assets/rect-image1.png" class="rect2" alt="original cinnamon roll small image">
+    <img src="Assets/cinnamonroll-rect.png" class="original-large" alt="original cinnamon roll with vanilla glaze and mint leaves">
+    <img src="Assets/rect-image.png" class="rect1" alt="original cinnamon roll small image">
+    <img src="Assets/rect-image1.png" class="rect2" alt="original cinnamon roll small image">
 
     <h1 class="Original-Heading">ORIGINAL</h1>
     <h2 class="Original-Price">$4.00</h2>
@@ -53,9 +53,9 @@
     <div class ="line1"></div>
     <h4 class ="Select">*Select your glaze</h4>
 
-    <img src="assets/vanilla.png" class="vanilla" alt="vanilla glaze" style="width:67px">
-    <img src="assets/chocolate.png" class="chocolate" alt="chocolate glaze" style="width:67px">
-    <img src="assets/sugar.png" class="sugar" alt="sugar glaze" style="width:67px">
+    <img src="Assets/vanilla.png" class="vanilla" alt="vanilla glaze" style="width:67px">
+    <img src="Assets/chocolate.png" class="chocolate" alt="chocolate glaze" style="width:67px">
+    <img src="Assets/sugar.png" class="sugar" alt="sugar glaze" style="width:67px">
 
     <div class="circle"></div>
     <div class="line1"></div>
