--- a/product.html
+++ b/product.html
@@ -34,7 +34,7 @@
     <img src="Assets/blackberry.png" class="blackberry" alt="Blackberry Cinnamon Roll" style="width:200px">
     <img src="Assets/walnut.png" class="walnut" alt="Walnut Cinnamon Roll" style="width:200px">
     <img src="Assets/gluten-free.png" class="gluten-free" alt="Original Gluten Free Cinnamon Roll" style="width:200px">
-    <img src="assets/pumpkin-spice.png" class="pumpkin-spice" alt="Pumpkin Spice Cinnamon Roll" style="width:200px">
+    <img src="Assets/pumpkin-spice.png" class="pumpkin-spice" alt="Pumpkin Spice Cinnamon Roll" style="width:200px">
     <img src="Assets/caramel-pecan.png" class="caramel-pecan" alt="Caramel Spice Cinnamon Roll" style="width:200px">
 
     <button class="button1" onclick='location.href="product_detail.html"'><b>Order Now</b></button>
