--- a/index.html
+++ b/index.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <link rel="stylesheet" href="styles.css">
-  <meta charset="utf-8" /> 
-	<meta name="author" content="Bun Bun Bake Shop">
-	<meta name="keywords" content="Bun Bun Bake Shop PUI">
+    <!-- css -->
+    <link rel="stylesheet" href="styles.css">
+    <meta charset="utf-8" /> 
+    <title>Bun Bun Bake Shop</title>
+	  <meta name="author" content="Bun Bun Bake Shop">
+	  <meta name="keywords" content="Bun Bun Bake Shop PUI">
 </head>
-<style>
-  
-
-</style>
-
 <body>
 
     <div class ="hero">
@@ -20,11 +17,10 @@
 
     <div class="container">
       <div class="topnav">
-          <a style = "text-decoration: none;"href="index.html"><b>HOME</b></a>
-          <a style = "text-decoration: none;float:right" href="#cart"><b>CART</b></a>
+          <a style = "text-decoration: none;" href="index.html"><b>HOME</b></a>
+          <a style = "text-decoration: none;float:right" href="cart.html"><b>CART (0)</b></a>
           <a style = "text-decoration: none;float:right" href="#about"><b>ABOUT</b></a>
           <a style = "text-decoration: none;float:right" href="product.html"><b>MENU</b></a>
-        </div>
       </div>
     </div>
 </body>
