--- a/product.html
+++ b/product.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <!-- css -->
     <link rel="stylesheet" href="styles.css">
     <meta charset="utf-8" /> 
-	<meta name="author" content="Bun Bun Bake Shop">
-	<meta name="keywords" content="Bun Bun Bake Shop PUI">
+    <title>Bun Bun Bake Shop</title>
+    <meta name="author" content="Bun Bun Bake Shop">
+    <meta name="keywords" content="Bun Bun Bake Shop PUI">
 </head>
 <style>
   img {
@@ -14,16 +16,49 @@
 </style>
 
 <body>
-
-    <div class="container">
-        <div class="topnav">
-            <a style = "text-decoration: none;"href="index.html"><b>HOME</b></a>
-            <a style = "text-decoration: none;float:right" href="#cart"><b>CART</b></a>
-            <a style = "text-decoration: none;float:right" href="#about"><b>ABOUT</b></a>
-            <a style = "text-decoration: none;float:right" href="product.html"><b>MENU</b></a>
-          </div>
-        </div>
+  <div class="container">
+    <div class="topnav">
+        <a style = "text-decoration: none;" href="index.html"><b>HOME</b></a>
+        <a style = "text-decoration: none;float:right;" href="cart.html"><b>CART (0)</b></a>
+        <a style = "text-decoration: none;float:right;" href="#about"><b>ABOUT</b></a>
+        <a style = "text-decoration: none;float:right;" href="product.html"><b>MENU</b></a>
       </div>
+    </div>
+  </div>
+
+
+    <div class ="square1"></div>
+    <div class ="square2"></div>
+    <div class ="square3"></div>
+    <h2>Cinnamon <br> Rolls</h2>
+    <!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <!-- css -->
+    <link rel="stylesheet" href="styles.css">
+    <meta charset="utf-8" /> 
+    <title>Bun Bun Bake Shop</title>
+    <meta name="author" content="Bun Bun Bake Shop">
+    <meta name="keywords" content="Bun Bun Bake Shop PUI">
+<style>
+  img {
+  border-radius: 50%;
+  }
+
+</style>
+</head>
+
+<body>
+  <div class="container">
+    <div class="topnav">
+        <a style = "text-decoration: none;" href="index.html"><b>HOME</b></a>
+        <a style = "text-decoration: none;float:right;" href="cart.html"><b>CART (0)</b></a>
+        <a style = "text-decoration: none;float:right;" href="#about"><b>ABOUT</b></a>
+        <a style = "text-decoration: none;float:right;" href="product.html"><b>MENU</b></a>
+    </div>
+  </div>
+
 
     <div class ="square1"></div>
     <div class ="square2"></div>
@@ -55,9 +90,6 @@
     <h3 class="ps-price"> $5.00 </h3>
     <h3 class="cp-text"> Caramel Pecan </h3>
     <h3 class="cp-price"> $5.00 </h3>
-
-
-
 
 </body>
 </html>
