--- a/cart.html
+++ b/cart.html
@@ -12,6 +12,7 @@
 
     <div class="container">
         <div class="topnav">
+            <!-- navigation bar and links to those pages-->
             <a style = "text-decoration: none;" href="index.html"><b>HOME</b></a>
             <a style = "text-decoration: none;float:right;" href="#cart.html"><b>CART (0)</b></a>
             <a style = "text-decoration: none;float:right;" href="#about"><b>ABOUT</b></a>
