--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- javascript -->
+	<script src="main.js" async></script>
+
     <!-- css -->
     <link rel="stylesheet" href="styles.css">
     <meta charset="utf-8" /> 
@@ -18,7 +21,7 @@
     <div class="container">
       <div class="topnav">
           <a style = "text-decoration: none;" href="index.html"><b>HOME</b></a>
-          <a style = "text-decoration: none;float:right" href="cart.html"><b>CART (0)</b></a>
+          <a style = "text-decoration: none;float:right;" href="cart.html"><b>CART (<b id="cartNum">0</b>)</b></a>
           <a style = "text-decoration: none;float:right" href="#about"><b>ABOUT</b></a>
           <a style = "text-decoration: none;float:right" href="product.html"><b>MENU</b></a>
       </div>
