--- a/product.html
+++ b/product.html
@@ -2,9 +2,7 @@
 <html lang="en">
 
 <head>
-    <!-- javascript -->
-    <script src="main.js" async></script>
-    
+
     <!-- css -->
     <link rel="stylesheet" href="styles.css">
     <meta charset="utf-8" /> 
@@ -61,5 +59,7 @@
     <h3 class="cp-text"> Caramel Pecan </h3>
     <h3 class="cp-price"> $5.00 </h3>
 
+    <!-- javascript -->
+	  <script src="main.js"></script>
 </body>
 </html>
