--- a/product_detail.html
+++ b/product_detail.html
@@ -2,8 +2,7 @@
 <html lang="en">
   
 <head>
-  <!-- javascript -->
-	<script src="main.js" async></script>
+
   <!-- css -->
   <link rel="stylesheet" href="styles.css">
   <title>Bun Bun Bake Shop</title>
@@ -102,6 +101,8 @@
   <form class="numOfBoxes" action="/action_page.php">
     <input type="number" id="numOfBoxes" name="quantity" value ="1" min="1" max="10" onchange="updateRollPrice()">
   </form>
-
+  
+  <!-- javascript -->
+	<script src="main.js"></script>
 </body>
 </html>
