--- a/photography.html
+++ b/photography.html
@@ -23,7 +23,7 @@
 <body>
 	<div id="container">
 		<div id="top_row">
-			<a href="index.html"><img src="images/steph-tseng-logo.png" alt="Stephanie Tseng Portfolio Logo"></a>
+			<a href="index.html"><img src="assets/images/stephanie-logo.png" alt="Stephanie Tseng Portfolio Logo"></a>
 			<nav>
 				<a class="nonselected" href="index.html">Projects</a>
 				<a class="nonselected" href="about.html">About</a>
