--- a/radiate.html
+++ b/radiate.html
@@ -34,17 +34,18 @@
 		<!--About Section with bio and resume button-->
 		<div id="content-sub">
 			<div id="subsection">
+			<div id="radiate-content">
 				<h2>Radiate</h2>
 				<p id="content-text">
 					A group of 8 female college students from Women of Rewriting the Code launched a passion project aimed to help promote minority owned small businesses. I designed our website, Radiate, for consumers to explore minority owned small businesses across the country by emphasizing the stories behind businesses and how we can support them. <br><br>
 				</p>
 				<div id="radiate-header-img"><img src="assets/images/radiate-header.jpg"></div>
 				<p id="content-text">
-					<b>Role:</b> Product Designer <br>
-					<b>Team:</b>Dena Sabha <br>
-					<b>Methods:</b> User Research, Web Design, Prototyping, Animation <br>
-					<b>Duration:</b> July 2020 - August 2020 (2 months) <br>
-					<b>Tools:</b> Figma, Adobe Creative Suite <br>	
+					<b>Role: </b> Product Designer <br>
+					<b>Team: </b>Dena Sabha <br>
+					<b>Methods: </b> User Research, Web Design, Prototyping, Animation <br>
+					<b>Duration: </b> July 2020 - August 2020 (2 months) <br>
+					<b>Tools: </b> Figma, Adobe Creative Suite <br>	
 				</p>
 				<h4>BACKGROUND</h4>
 				<p id="content-text">
@@ -100,6 +101,7 @@
 				<p id="content-text">Moving forward, I would like to conduct more usability tests on this product and interview more small business owners and develop the designs further to address user and small business needs. Creating Radiate was a rewarding experience and I really enjoyed collaborating with students with diverse backgrounds to develop a concept we are all passionate about.</p> 
 			</div>	
 		</div>
+	</div>
 
 		<footer>
 			<!--Social media buttons-->
