--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
 	<div id="content">
 		<div id="content-sub">
 			<div id="subsection">
-				<h2>Radiate</h2>
+				<h2>About Me</h2>
 				<p id="content-text">
 					Hi, I'm Stephanie, a junior at Carnegie Mellon studying Information System and Human Computer
 					Interaction. My focus is on user experiences, product design, and user research. As a designer, I
