--- a/radiate.html
+++ b/radiate.html
@@ -39,18 +39,22 @@
 				<p id="content-text">
 					A group of 8 female college students from Women of Rewriting the Code launched a passion project aimed to help promote minority owned small businesses. I designed our website, Radiate, for consumers to explore minority owned small businesses across the country by emphasizing the stories behind businesses and how we can support them. <br><br>
 				</p>
-				<div id="radiate-header-img"><img src="assets/images/radiate-header.jpg"></div>
+				<div id="radiate-img"><img src="assets/images/radiate-header.jpg"></div>
 				<p id="content-text">
-					<b>Role: </b> Product Designer <br>
-					<b>Team: </b>Dena Sabha <br>
-					<b>Methods: </b> User Research, Web Design, Prototyping, Animation <br>
-					<b>Duration: </b> July 2020 - August 2020 (2 months) <br>
-					<b>Tools: </b> Figma, Adobe Creative Suite <br>	
+					<b>ROLE: &nbsp;</b> Product Designer &nbsp;&nbsp;&nbsp;
+					<b>TEAM: &nbsp;</b> Dena Sabha &nbsp;&nbsp;&nbsp;
+					<b>Duation: &nbsp;</b> July 2020 - August 2020 (2 months) 
+
+				</p>
+				<p id="content-text">
+					<b>METHODS: &nbsp;</b> User Research, Web Design, Prototyping, Animation &nbsp;&nbsp;&nbsp;
+					<b>TOOLS: &nbsp;</b> Figma, Adobe Creative Suite 	
+
 				</p>
 				<h4>BACKGROUND</h4>
 				<p id="content-text">
 					The pandemic has been culturally devastating for communities. Hundreds of thousands of small businesses closed forever and to say the pandemic has left a crushing impact on small business minority owners is an understatement. We wanted to create a platform that allows people to search for and explore small businesses who are owned specifically by women, LGBTQIA+, people of color, or people with disabilities. Behind these businesses are real people with stories to tell, and currently there are no platforms that connect customers and businesses beyond the surface level. <br><br>
-					<b>By May, one hundred thousand small businesses permanently closed due to the pandemic.</b>
+					<h5>By May, one hundred thousand small businesses permanently closed due to the pandemic.</h5>
 				</p>
 				<h4>CHALLENGE</h4>
 				<p id="content-text">
@@ -63,18 +67,18 @@
 				<h4>OUR SOLUTION</h4>
 				<h5>Encouraging users to explore small businesses</h5>
 				<p id="content-text">Radiate's landing screen consists of three hero images to evoke emotions and demonstrate value propositions. The affordances and animations encourage users to keep scrolling to learn more about stories behind small businesses and how they can support them. </p>
-				<div id="radiate-header-img"><img src="assets/images/radiate-search.png"></div>
+				<div id="radiate-img"><img src="assets/images/radiate-search.png"></div>
 				<h5>Engage users to read stories and learn ways they can support</h5>
 				<p id="content-text">Delightful interactions on each page to engage the user in the story behind each small business. Convey detailed information about each business and encourage the user to learn how they can support each small businesses.</p>
-				<div id="radiate-header-img"><img src="assets/images/radiate-udupi.png"></div>
+				<div id="radiate-img"><img src="assets/images/radiate-udupi.png"></div>
 				<h5>Spotlight small businesses</h5>
 				<p id="content-text">Small businesses are grouped by categories and encourage exploration of the small businesses through a carousel. A different small business is spotlighted each week for users to have multiple points of interactions with stories. </p>
 				<h4>USER RESEARCH</h4>
 				<p id="content-text">Through short interviews, we uncovered that people are eager to support minority owned small businesses but difficulties stemmed from not being able to find and learn about the small businesses. We surveyed over 60 people to uncover more painpoints and opportunities for our platform to address them. 
 				Social media was a very popular platform where people learned about struggling small businesses and ways they could support them. However, determining directions, hours, and other small businesses near-by would be a diligent process. There are many resources online that most people used such as Yelp, Google, etc. but more often than not, small businesses are overshadowed by large corporations.</p>
-				<div id="radiate-header-img"><img src="assets/images/radiate-user-research.jpg"></div>
+				<div id="radiate-img"><img src="assets/images/radiate-user-research.jpg"></div>
 				<h4>PAINPOINTS</h4>
-				<ul id="content-text">
+				<ul id="content-list">
 						<li>Small businesses are overshadowed by large corporations</li>
 						<li>No consolidated list of minority owned small businesses</li>
 						<li>No knowledge on story and mission statement behind a business</li>
@@ -82,21 +86,21 @@
 						<li>Little to no information on how to support</li>
 						<li>Tend to turn to convenient options like Yelp</li>
 				</ul>  
-				<div id="radiate-header-img"><img src="assets/images/radiate-painpoints.jpg"></div>
+				<div id="radiate-img"><img src="assets/images/radiate-painpoints.jpg"></div>
 				<h4>STYLE GUIDE</h4>
 				<p id="content-text">The goal of this platform is to create a spotlight on small businesses by coming together as a community. With our mission in mind, I designed a logo to reflect the power of everyone from different backgrounds coming together as a community.</p> 
-				<div id="radiate-header-img"><img src="assets/images/radiate-logo-design.png"></div>
+				<div id="radiate-img"><img src="assets/images/radiate-logo-design.png"></div>
 				<p id="content-text">We wanted to create a warm and confident design and choose to use a light blue background paired with a navy blue foreground and muted red.​We choose to use different shade so blue to emphasize the sites's reliability and supportive nature. The red was chosen to reflect encouragement and passion.</p> 
-				<div id="radiate-header-img"><img src="assets/images/radiate-painpoints.jpg"></div>
+				<div id="radiate-img"><img src="assets/images/radiate-painpoints.jpg"></div>
 				<h4>LO-FIDELITY</h4>
 				<p id="content-text">We began our ideation by conducting a Figma brainstorming session with our engineers and each person designed a lo-fidelity mockup of what their vision for the website.</p> 
-				<div id="radiate-header-img"><img src="assets/images/radiate-lo-fi.png"></div>
+				<div id="radiate-img"><img src="assets/images/radiate-lo-fi.png"></div>
 				<h4>MID-FIDELITY</h4>
 				<p id="content-text">The design team explored various color schemes and developed mid-fidelity mockups from our early designs. We presented these to users for usability testing and to better understand their needs.</p> 
-				<div id="radiate-header-img"><img src="assets/images/radiate-mid-fi.png"></div>
+				<div id="radiate-img"><img src="assets/images/radiate-mid-fi.png"></div>
 				<h4>FINAL DESIGN</h4>
 				<p id="content-text">I designed high-fidelity prototypes based on the needs and painpoints discovered during usability testing sessions. I developed animations and interaction points to bring joy to the user experience.</p> 
-				<div id="radiate-header-img"><img src="assets/images/radiate-high-fi.png"></div>
+				<div id="radiate-img"><img src="assets/images/radiate-high-fi.png"></div>
 				<h4>REFLECTION</h4>
 				<p id="content-text">Moving forward, I would like to conduct more usability tests on this product and interview more small business owners and develop the designs further to address user and small business needs. Creating Radiate was a rewarding experience and I really enjoyed collaborating with students with diverse backgrounds to develop a concept we are all passionate about.</p> 
 			</div>	
