--- a/radiate.html
+++ b/radiate.html
@@ -40,15 +40,13 @@
 					A group of 8 female college students from Women of Rewriting the Code launched a passion project aimed to help promote minority owned small businesses. I designed our website, Radiate, for consumers to explore minority owned small businesses across the country by emphasizing the stories behind businesses and how we can support them. <br><br>
 				</p>
 				<div id="radiate-img"><img src="assets/images/radiate-header.jpg"></div>
+				
 				<p id="content-text">
-					<b>ROLE: &nbsp;</b> Product Designer &nbsp;&nbsp;&nbsp;
-					<b>TEAM: &nbsp;</b> Dena Sabha &nbsp;&nbsp;&nbsp;
-					<b>Duation: &nbsp;</b> July 2020 - August 2020 (2 months) 
-
-				</p>
-				<p id="content-text">
-					<b>METHODS: &nbsp;</b> User Research, Web Design, Prototyping, Animation &nbsp;&nbsp;&nbsp;
-					<b>TOOLS: &nbsp;</b> Figma, Adobe Creative Suite 	
+					ROLE: &nbsp;Product Designer <br>
+					TEAM: &nbsp; Dena Sabha <br>
+					Duation: &nbsp; July 2020 - August 2020 (2 months) <br>
+					METHODS: &nbsp; User Research, Web Design, Prototyping, Animation <br>
+					TOOLS: &nbsp; Figma, Adobe Creative Suite <br>
 
 				</p>
 				<h4>BACKGROUND</h4>
