--- a/index.html
+++ b/index.html
@@ -37,9 +37,8 @@
 				<div id="intro">I'm a product designer passionate about designing delightful human-centered experiences.
 					<br><br>
 					Currently a Product Designer @ <a href="https://www.childrenshospital.org/" target="_blank"><span
-							id="bch">Boston
-							Children's Hospital</span></a> and <a href="https://412foodrescue.org/"
-						target="_blank"><span id="foodRescue">412 Food Rescue</span></a>.
+							id="bch">Boston Children's Hospital</span></a> and <a href="https://412foodrescue.org/"
+							target="_blank"><span id="foodRescue">412 Food Rescue</span></a>.
 				</div>
 				<!--Scroll down to projects section on click-->
 				<div id="button-wrapper"><button onclick="Scroll()" id="button-hover" type="button">VIEW
@@ -53,7 +52,7 @@
 			<div id="projects">
 				<section class="cards-wrapper">
 					<div class="project-card">
-						<a class="card radiate-card" href="radiate.html"
+						<a class="card radiate-card" href="projects/radiate.html"
 							style="--bg-img: url(https://uploads-ssl.webflow.com/5e17ac4dfb569e834e8a6376/60122f1e58f32c024fbaf426_RTC%20Mockup.png)">
 							<div>
 								<h3 id="radiate-heading">Radiate</h3>
@@ -69,7 +68,7 @@
 					</div>
 
 					<div class="project-card">
-						<a class="card agot-card" href=""
+						<a class="card agot-card" href="projects/agot.html"
 							style="--bg-img: url('https://uploads-ssl.webflow.com/5e17ac4dfb569e834e8a6376/601634b3fefb7b55f60c6bfe_AgotMockup-FINAL-p-2000.png')">
 							<div>
 								<h3 id="agot-heading">Agot.AI</h3>
