--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 					</div>
 
 					<div class="project-card">
-						<a class="card atlantis-card" href=""
+						<a class="card atlantis-card" href="projects/atlantis-hub.html"
 							style="--bg-img: url('https://uploads-ssl.webflow.com/5e17ac4dfb569e834e8a6376/60119a1c1cdc5c3255dcd85b_AH-min.png')">
 							<div>
 								<h3 id="atlantis-heading">Atlantis Hub</h3>
