Alt text for project-images

--- a/projects/agot.html
+++ b/projects/agot.html
@@ -42,7 +42,7 @@
 						system and order accuracy tracking system to address consumer and employee painpoints and
 						established a consistent brand identity. <br><br>
 					</p>
-					<div><img src="../assets/images/agot-header-img.png"></div>
+					<div><img src="../assets/images/agot-header-img.png" alt="Five mockup screens of the Agot.AI project with a red background"></div>
 
 					<p>
 						ROLE: &nbsp;Product Designer <br>
@@ -81,20 +81,20 @@
 					<p>Agot's technology tracks each order from the point of sale to the preparation
 						process. The kitchen display system provides a seamless experience for employees to be alerted
 						of possible errors and how to correct the order. </p>
-					<div><img src="../assets/images/agot-camera.png"></div>
+					<div><img src="../assets/images/agot-camera.png" alt="Tablet screen that showcases a real-time video of a meal being prepped and tracks the status"></div>
 
 					<h5>Cashierless Checkout</h5>
 					<p>Display computer vision generated order summary and details. Guide a smooth and
 						efficient payment process for customers.</p>
-					<div><img src="../assets/images/agot-checkout.png"></div>
+					<div><img src="../assets/images/agot-checkout.png" alt="Checkout screen for users to self-checkout"></div>
 
 					<h5>QR Code Payment</h5>
 					<p>Secure contact-less payment on mobile devices to streamline the order payment
 						process and address current challenges. </p>
-					<div><img src="../assets/images/agot-mobile.png"></div>
+					<div><img src="../assets/images/agot-mobile.png" alt="Mobile device screens for users to complete their checkout on their phones"></div>
 
 					<h4>PROBLEM SPACE</h4>
-					<div><img src="../assets/images/agot-problem-space.png"></div>
+					<div><img src="../assets/images/agot-problem-space.png" alt="Two boxes with text. Box 1: Top 5 Customer Complaints. Inaccurate in-house, carry-out, or delivery boxes. Box 2: US resturants generally generate 22 to 33 billion poudns of food waste annually."></div>
 					<p>An order accuracy system can improve the customer experience and aid in the
 						reduction of food waste.
 						Agot's technology effectively tracks an order throughout the preparation process but there is
@@ -105,7 +105,7 @@
 						screen is a live view of orders that are currently being prepared and keeps track of completed
 						orders. When the system detects an incorrect orders, employees are notified to confirm the order
 						they are preparing. </p>
-					<div><img src="../assets/images/agot-employee.png"></div>
+					<div><img src="../assets/images/agot-employee.png" alt="Order accuracy high fiedlity screens for resturant employees"></div>
 
 					<h5>Clear instructions to fix inaccurate orders</h5>
 					<p>After employees confirm the order they are preparing, they are presented with
@@ -113,13 +113,13 @@
 						most effective way to convey the errors to employees. Employees receive clear instructions at
 						this stage on the changes they must make to orders. Once the appropriate changes are made, the
 						system automatically classifies the order as completed. </p>
-					<div><img src="../assets/images/agot-accuracy.png"></div>
+					<div><img src="../assets/images/agot-accurate.png" alt="Screen where employees see what is wrong with the order they prepared"></div>
 
 					<h5>Seamless experience when no mistakes are detected</h5>
 					<p>When prepared orders are correct, employees are notified as so and can proceed
 						preparing other orders without interacting with the screen. Although this is an employee facing
 						experience, it positively impacts the customer experience. </p>
-					<div><img src="../assets/images/agot-seamless.png"></div>
+					<div><img src="../assets/images/agot-seamless.png" alt="Left: Live Camera View and tracks of the status of orders, Right: Correct Order Screen with green background and confirmation message"></div>
 
 					<h5>Customer Facing Problem</h5>
 					<p>The cashier less checkout system Agot deployed at the time did not facilitate a
@@ -127,14 +127,14 @@
 						necessary to ensure a safe experience for customers during the pandemic. The current checkout
 						experience design did not optimize the order-to-fullfilmient process and lacked a consistent
 						design language. The UI of the checkout lacked information architecture and contrast.</p>
-					<div><img src="../assets/images/agot-customer-facing.png"></div>
+					<div><img src="../assets/images/agot-customer-facing.png" alt="The current solution that exists for Agot, lack of visual design"></div>
 
 					<h4>COMPETITIVE ANALYSIS</h4>
 					<p>I conducted competitive analysis on existing restaurant cashier less checkout
 						systems and I created user flows that reflected the user experience for each system. I then
 						mapped the user flow of made-to-order restaurants and identified painpoints in the flow that
 						Agot's technology addressed.</p>
-					<div><img src="../assets/images/agot-journey-map.png"></div>
+					<div><img src="../assets/images/agot-journey-map.png" alt="Customer journey map of users current experiences in resturants"></div>
 
 					<h5>How can we facilitate an efficient and accurate checkout experience?</h5>
 					<p>The redesigned checkout process alleviates the delayed checkout process in
@@ -142,14 +142,14 @@
 						given the option to learn more details about their order. Customers can easily continue the
 						checkout process on the POS system or can proceed with a contact-less method on their mobile
 						devices.</p>
-					<div><img src="../assets/images/agot-accuracy.png"></div>
+					<div><img src="../assets/images/agot-accuracy.png" alt="Two variations of the accuracy confirmation screen"></div>
 
 					<h5>Two-Step Payment Process</h5>
 					<p>Customers are guided through the two-step payment process and can easily
 						inquire for help from an employee. To a facilitate a contact-less experience, this system is
 						currently focused on credit card purchases and reducing the number of clicks users need to make
 						to complete their checkout.</p>
-					<div><img src="../assets/images/agot-two-step.png"></div>
+					<div><img src="../assets/images/agot-two-step.png" alt="Payment process for self-checkout users."></div>
 
 					<h4>METRICS</h4>
 					<ul id="content-list">
