--- a/projects/atlantis-hub.html
+++ b/projects/atlantis-hub.html
@@ -42,7 +42,7 @@
 						interactive experience for travelers and residents traveling between the San Juan islands.
 						<br><br>
 					</p>
-					<div><img src="../assets/images/atlantis-hub-header.png"></div>
+					<div><img src="../assets/images/atlantis-hub-header.png" alt="A data driven display in a transportation hub alongside interactive controls"></div>
 
 					<p>
 
@@ -81,7 +81,7 @@
 						</li>
 						<li>* Offer a highly readable environmental data driven display. </li>
 					</ul>
-					<div><img src="../assets/images/ah-elizabeth.png"></div>
+					<div><img src="../assets/images/ah-elizabeth.png" alt="Stakeholder map for Elizabeth Duarte, a stakeholder"></div>
 
 					<h5>Local Resident - George Shimko</h5>
 					<ul>
@@ -89,7 +89,7 @@
 						<li>* Plan travel routes and learn how to switch between different forms of transportation
 							through the display. </li>
 					</ul>
-					<div><img src="../assets/images/ah-george.png"></div>
+					<div><img src="../assets/images/ah-george.png" alt="Stakeholder map for George Shimko a resident on the San Juan Islands"></div>
 
 					<h5>Frequent Travler - Patrick Mulvaney</h5>
 					<ul>
@@ -97,14 +97,14 @@
 						</li>
 						<li>Easily identify alternative routes in case of delays or cancellations.</li>
 					</ul>
-					<div><img src="../assets/images/ah-patrick.png"></div>
+					<div><img src="../assets/images/ah-patrick.png" alt="Stakeholder map for Patrick Mulvaney, a frequent travler"></div>
 
 					<h4>SKETCHES</h4>
 					<p>We each used rapid ideation to hand sketch many different possibilities of
 						presenting the data. Through parallel design, we were able to talk through each design and as a
 						group choose what we liked from each design and bring those features together for the next
 						iteration.</p>
-					<div><img src="../assets/images/ah-sketches.png"></div>
+					<div><img src="../assets/images/ah-sketches.png" alt="Sketches and variations for the Atlantis Hub display"></div>
 
 					<h4>ITERATIONS</h4>
 					<p>We then digitized our sketches using Figma. We created multiple iterations
@@ -112,7 +112,7 @@
 						create a delightful experience for users while meeting our stakeholder and users needs. In
 						addition to the display screens, we incorporated an animation and control to facilitate an
 						interactive experience.</p>
-					<div><img src="../assets/images/ah-iterations.png"></div>
+					<div><img src="../assets/images/ah-iterations.png" alt="Mid-fi iterations for the Atlantis Hub display"></div>
 
 
 					<h4>FINAL DESIGN</h4>
@@ -120,20 +120,20 @@
 					<p>The layout of the trip information is organized to make the most important data
 						apparent at a glance. Our goal was to emphasize the trip that is leaving first and provide
 						emphasis through a larger box, a lower opacity, larger font and more detailed information.</p>
-					<div><img src="../assets/images/ah-info-arch.png"></div>
+					<div><img src="../assets/images/ah-info-arch.png" alt="Breakdown of the information architecture of each trip"></div>
 
 					<h5>Map Design</h5>
 					<p>Several iterations of map design were required to find a balance between the
 						familiar features of an accurate geographic representation, with the simplicity of a diagram.
 						Once this balance was found the map was incorporated into the overall design and style to form a
 						cohesive display.</p>
-					<div><img src="../assets/images/ah-map.png"></div>
+					<div><img src="../assets/images/ah-map.png" alt="Breakdown of the various components of the map-design, specifically the typography, lettering, and legend."></div>
 
 					<h5>Control Design</h5>
 					<p>Our control consists of five buttons in the shape of the islands. When users
 						press one of the island, the screen will display the sightseeing information of the island
 						accordingly on the right side of the screen and zoom in on the selected island.</p>
-					<div><img src="../assets/images/ah-control-design.png"></div>
+					<div><img src="../assets/images/ah-control-design.png" alt="Demonstratse how the display will be interacting with the controls"></div>
 
 					<h4>REFLECTION</h4>
 					<p>This project presented a number of challenges in terms of both the design
