--- a/about.html
+++ b/about.html
@@ -21,20 +21,28 @@
 
 <body>
 	<div id="container">
-		<div id="top_row">
-			<a href="index.html"><img src="assets/images/stephanie-logo.png" alt="Stephanie Tseng Portfolio Logo"></a>
-			<nav>
-				<a class="nonselected" href="index.html">Projects</a>
-				<a class="selected" href="about.html">About</a>
-				<a class="nonselected" href="photography.html">Photography</a>
-			</nav>
+		<!-- Navigation bar referenced https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_responsive_navbar_dropdown for responsiveness-->
+		<div class="topnav" id="myTopnav">
+			<div class="logo">
+				<a href="index.html"><img src="assets/images/steph-tseng-logo.png"
+						alt="Stephanie Tseng Portfolio Logo"></a>
+
+				<div class="nav-links">
+
+					<a class="nonselected" href="index.html">Projects</a>
+					<a class="selected" href="about.html">About</a>
+					<a class="nonselected" href="photography.html">Photography</a>
+
+					<a href="javascript:void(0);" class="icon" onclick="burgerIcon()">&#9776;</a>
+
+				</div>
+			</div>
 		</div>
-	</div>
 	<div id="content">
 		<div id="content-sub">
 			<div id="subsection">
 				<h2>About Me</h2>
-				<p id="content-text">
+				<p>
 					Hi, I'm Stephanie, a junior at Carnegie Mellon studying Information System and Human Computer
 					Interaction. My focus is on user experiences, product design, and user research. As a designer, I
 					aim to create delightful user experiences through empathy and bring joy into people's lives. I enjoy
@@ -91,6 +99,7 @@
 		</div>
 			Made with ❤️ by Stephanie @2021<br />
 		</footer>
+	</div>
 	</div>
 </body>
 
