--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<meta name="author" content="Stephanie Tseng Portfolio">
 	<meta name="keywords" content="Stephanie Tseng Portfolio">
 	<meta name="description" content="Stephanie Tseng Portfolio">
+	
+	/* new comment */
 
 	<title>Stephanie Tseng Portfolio</title>
 
