--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 	<meta name="description" content="Stephanie Tseng Portfolio">
 
 	<title>Stephanie Tseng Portfolio</title>
+	
+	/* new comment */
 
 	<!-- External Links to CSS files -->
 	<link rel="stylesheet" media="all" type="text/css" href="assets/css/styles.css" />
